--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="bar">
         <h1 id="title" class="site">IsaacPar | Site</h1>
-        <a href="index.html"></a>
+        <a href="https://isaacpar.github.io"></a>
     </div>
     <h1 class="align-center">There's My Site</h1>
     <script type="text/javascript">
