--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <p>I'm Isaac, I Have 9 Years,
         And one of the things I like the most is programming
       </p>
-      <h1>Find Me</h1>
-      <a id="me">Attack</a>
+      <h1>$findme:<blink>|</blink></h1>
+      <a href="https://www.reddit.com/user/PartisanIsaac2021">Reddit</a>
+      <a href="https://www.github.com/IsaacPar">Github</a>
     </div>
     
     <script src="winbox.bundle.js"></script>
