--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
   </head>
   <body>
     <div class="container">
-      <h1>$isaacp:<blink>|</blink></h1>
+      <a id="findcall" style="text-align: center;">/find-me</a>
+      <h1>$isaacpar:<blink>|</blink></h1>
       <p>I'm Isaac, I Have 9 Years,
         And one of the things I like the most is programming
       </p>
-      <h1>$findme:<blink>|</blink></h1>
-      <a href="https://www.reddit.com/user/PartisanIsaac2021">Reddit</a>
-      <a href="https://www.github.com/IsaacPar">Github</a>
     </div>
-    
+    <div id="hidden">
+      <div style="text-align: center;" id="winbox1">
+        <h1>$find-me:<blink>|</blink></h1>
+        <a href="https://www.reddit.com/user/PartisanIsaac2021">Reddit</a>
+        <br>
+        <a href="https://www.github.com/IsaacPar">Github</a>
+      </div>
+    </div>
     <script src="winbox.bundle.js"></script>
     <script src="/main.js"></script>
   </body>
