--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         And one of the things I like the most is programming
       </p>
     </div>
-    <div id="hidden">
+    <div class="hidden">
       <div style="text-align: center;" id="winbox1">
         <h1>$find-me:<blink>|</blink></h1>
         <a href="https://www.reddit.com/user/PartisanIsaac2021">Reddit</a>
