Oops, 404: Page Not Found

--- a/404.html
+++ b/404.html
@@ -8,8 +8,21 @@
     <title>IsaacPar Site</title>
   </head>
   <body>
-    <h1>$404:<blink>|</blink></h1>  
-    <p>Page Not Found</p>
+    <header class="header">
+      <div class="topbar">
+        <a href="/">IsaacPar Site</a>
+        <a></a>
+        <a></a>
+      </div>
+      <div class="topcontainer">
+        <div class="container">
+          <h1>$404:<blink>|</blink></h1>
+          <p>Page Not Found</p>
+        </div>
+      </div>
+      <script src="winbox.bundle.js"></script>
+      <script src="/main.js"></script>
+    </header>
 
     <script src="/site/main.js"></script>
   </body>
