enable javascript now

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>IsaacPar Site</title>
   </head>
   <body>
+    <noscript>This Site Have Some Things That Need Javascript, Enable JS For This Page Or Update Your Stone-Age Browser </noscript>
     <header class="header">
       <div class="topbar">
         <a href="/">IsaacPar Site</a>
